--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Startseite - HTML Training </title>
-        <meta name="description" content="In diesem Kurs lernen Sie das Erstellen und Gestalten von mit HTML und CSS">
+        <meta name="description" content="In diesem lernst du Kurs alles über HTML+CSS">
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         
