--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="de">
     <!-- head enthält Informationen über diese Webseite -->
+    <!-- head enthält Informationen über diese Webseite -->
     <head>
         <meta charset="utf-8">
         <title>Startseite - HTML Training </title>
